# todo_back

./: .gitignore  PLAN.md  README.md  pyproject.toml
app/: main.py
app/api/routers/: todos.py
app/core/: config.py  firestore.py
app/domain/todos/: entities.py  interfaces.py
app/middlewares/: request_id.py  security_headers.py
app/models/: todo.py
app/repositories/todos/: firestore_repository.py
app/routers/: todos.py
app/schemas/: todos.py
app/services/todos/: service.py
docs/: FLUJO.md
frontend_handout/: API.md  README_FRONTEND.md  openapi.json
scripts/: cleanup_firestorm.py  seed_firestorm.py
tests/: test_todos.py
